--- a/BasicStructure1/app/build.gradle
+++ b/BasicStructure1/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.david.myfirstapp"
+        applicationId "com.example.david.alpha"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
