--- a/BasicStructure1/app/build.gradle
+++ b/BasicStructure1/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
